[releng] Eliminate all deprecation warnings.